# nornir_utils

./: .gitignore  Dockerfile  Makefile  README.md  README.rst  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: codeql-analysis.yml  main.yaml
docs/api/: functions.rst  inventory.rst  processors.rst
docs/doctrees/: environment.pickle  index.doctree
docs/doctrees/api/: functions.doctree  index.doctree  inventory.doctree  processors.doctree  tasks.doctree
docs/doctrees/nbsphinx/tutorials/: echo_data.ipynb  function_print_result.ipynb  function_print_title.ipynb  inventory_YAMLInventory.ipynb  processor_PrintResult.ipynb  write_file.ipynb
docs/doctrees/tutorials/: echo_data.doctree  function_print_result.doctree  function_print_title.doctree  index.doctree  inventory_SimpleInventory.doctree  inventory_YAMLInventory.doctree  load_credentials.doctree  load_json.doctree  load_yaml.doctree  processor_PrintResult.doctree  simple-inventory.doctree  tcp_ping.doctree  write_file.doctree
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_sources/: index.rst.txt
docs/html/_sources/api/: inventory.rst.txt  tasks.rst.txt
docs/html/_sources/tutorials/: echo_data.ipynb.txt  inventory_SimpleInventory.ipynb.txt  inventory_YAMLInventory.ipynb.txt  load_credentials.ipynb.txt  load_yaml.ipynb.txt
docs/html/api/: functions.html  index.html  inventory.html  processors.html  tasks.html
docs/html/tutorials/: echo_data.html  function_print_result.html  function_print_result.ipynb  function_print_title.html  index.html  inventory_SimpleInventory.html  inventory_YAMLInventory.html  load_credentials.html  load_json.html  load_yaml.html  load_yaml.ipynb  processor_PrintResult.html  simple-inventory.html  tcp_ping.html  write_file.html
docs/inventory/: simple-inventory.ipynb
docs/inventory/.ipynb_checkpoints/: simple-inventory-checkpoint.ipynb
docs/source/: conf.py  index.rst
docs/source/api/: functions.rst  processors.rst  tasks.rst
docs/source/tutorials/: echo_data.ipynb  function_print_result.ipynb  function_print_stat.ipynb  function_write_result.ipynb  function_write_results.ipynb  load_credentials.ipynb  load_json.ipynb  load_yaml.ipynb  simple-inventory.ipynb  tcp_ping.ipynb  write_file.ipynb
docs/source/tutorials/data/: hosts.yaml  (+4 more)
nornir_utils.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nornir_utils/plugins/functions/: __init__.py  print_result.py  print_stat.py  write_result.py  write_results.py
nornir_utils/plugins/inventory/: __init__.py  simple.py  transform_functions.py  yaml_inventory.py
nornir_utils/plugins/processors/: __init__.py
(+6 files in other folders)
