[tool.poetry]
name = "nornir_utils"
version = "0.1.1"
description = "Collection of plugins and functions for nornir that don't require external dependencies"
authors = ["David Barroso <dbarrosop@dravetech.com>"]
license = "Apache-2.0"

[tool.poetry.plugins."nornir.plugins.inventory"]
"YAMLInventory" = "nornir_utils.plugins.inventory.yaml_inventory:YAMLInventory"

[tool.poetry.dependencies]
python = "^3.6"
nornir = { version = "~3.0.0b1", allow-prereleases = true }
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]
black = { version = "19.10b0", allow-prereleases = true }
mypy = "*"
pylama = "^7.7.1"
pytest = "*"
nbval = "*"
jupyter = "^1"
sphinx = "^3.0.3"
sphinxcontrib-napoleon = "^0.7"
nbsphinx = "^0.6.1"
sphinx-issues = "^1.2.0"
sphinx_rtd_theme = "^0.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
