[tool.poetry]
name = "nornir_utils"
version = "0.2.0"
description = "Collection of plugins and functions for nornir that don't require external dependencies"
authors = ["David Barroso <dbarrosop@dravetech.com>"]
license = "Apache-2.0"

[tool.poetry.plugins."nornir.plugins.inventory"]
"YAMLInventory" = "nornir_utils.plugins.inventory.yaml_inventory:YAMLInventory"

[tool.poetry.plugins."nornir.plugins.transform_function"]
"load_credentials" = "nornir_utils.plugins.inventory.transform_functions:load_credentials"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
nornir = { version = "~3", allow-prereleases = true }
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]
black = "*"
mypy = "*"
pylama = "*"
pytest = "*"
nbval = "*"
jupyter = "^1"
sphinx = "^5.3.0"
sphinxcontrib-napoleon = "^0.7"
nbsphinx = "^0.9.2"
sphinx-issues = "^3.0.1"
sphinx_rtd_theme = "^1.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
